[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pykout"
version = "0.0.1"
authors = [
    { name="joaoLouceiro" }
]
description = "Smash those blocks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [ "pytest" ]

[project.urls]
Homepage = "https://github.com/joaoLouceiro/py_breakout"
Issues = "https://github.com/joaoLouceiro/py_breakout/issues"

[project.scripts]
pykout = "pykout.main:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

